force-app/main/default/objects/Einstein_Security_Profile__mdt/Einstein_Security_Profile__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings required to authenticate with the Einstein platform.</description>
    <label>Einstein Security Profile</label>
    <pluralLabel>Einstein Security Profiles</pluralLabel>
</CustomObject>