force-app/main/default/objects/Einstein_Security_Profile__mdt/fields/Is_Default_Profile__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to select a record as the default profile.</description>
    <inlineHelpText>Please select whether this profile becomes the default profile. A default profile is required. If default profile already exists when a new record is created and marked as default, the default flag of the previous record will be unchecked.</inlineHelpText>
    <label>Is Default Profile</label>
    <type>Checkbox</type>
</CustomField>