force-app/main/default/objects/Einstein_Security_Profile__mdt/fields/RSA_Key__c.field-meta.xml
<CustomField>
    <fullName>RSA_Key__c</fullName>
    <label>RSA Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>